# evoalign

./: .gitignore  LICENSE  README.md  pyproject.toml
aars/: aar_v0_1.json
chronicle/events/: event_anomaly_001.json  event_threshold_002.json
ci/invariants/: aar_evidence_chain.py  base.py  budget_solvency.py  check_invariants.py  chronicle_governance.py  context_inventory.py  context_lattice_governance.py  context_registry.py  context_scan.py  contract.py  evidence_governance.py  file_utils.py  fit_plan_aar_consistency.py  fit_provenance_complete.py  fit_provenance_integrity.py  lattice_utils.py  lineage_integrity.py  loc_check.py  (+11 more)
docs/: CONTEXT_LATTICE.md  HANDOFF_HARDENING.md  LINEAGE_CHRONICLE.md  PROVENANCE_HASHING.md  RUNTIME_GUARDRAILS.md  SECRECY_HASH_REGISTRY.md  TAMPER_EVIDENCE.md
evoalign/: __init__.py  cli.py  context_lattice.py  merkle.py  provenance.py  secrecy_fingerprints.py
evoalign.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lineage/: entry_lin_v1_creation.json  entry_lin_v1_promotion_canary.json
schemas/: AAR.schema.json  ChronicleEntry.schema.json  ContextLattice.schema.json  DampingConfig.schema.json  DatasetManifest.schema.json  EvalRunManifest.schema.json  LineageLedgerEntry.schema.json  MonitoringConfig.schema.json  OversightPlan.schema.json  PublicKeyRegistry.schema.json  RiskCurveFit.schema.json  RiskSweepManifest.schema.json  SafetyContract.schema.json  SecretSuiteHashRegistry.schema.json  SuiteRegistry.schema.json  SuiteSet.schema.json
tests/: test_cli.py  test_merkle.py  test_provenance.py
(+33 files in other folders)
